K8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: bank-api

spec:
  replicas: 3

  selector:
    matchLabels:
      app: bank-api

  template:
    metadata:
      labels:
        app: bank-api

    spec:
      containers:
        - name: bank-api
          image: bank-api:latest
          imagePullPolicy: Never

          ports:
            - containerPort: 5000
