K8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: bank-api

spec:
  selector:
    app: bank-api

  ports:
    - port: 80
      targetPort: 5000

  type: ClusterIP
