K8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: bank-ingress

spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: bank-api

                port:
                  number: 80
